[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/Audio/Glue Landing.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/characters/DemonShaman/DemonShaman-Idle.png" type="Texture" id=2]
[ext_resource path="res://src/characters/DemonShaman.gd" type="Script" id=3]
[ext_resource path="res://src/projectiles/GlueSpatter.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/projectiles/Fireball.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/characters/DemonShaman/DemonShaman-Walk.png" type="Texture" id=6]
[ext_resource path="res://assets/characters/DemonShaman/DemonShaman-Shoot.png" type="Texture" id=7]
[ext_resource path="res://assets/Audio/ShamanShot.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 29, 28 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 29, 0, 29, 28 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 58, 0, 29, 28 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 87, 0, 29, 28 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 7 )
region = Rect2( 224, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 7 )
region = Rect2( 352, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 32, 28 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 29, 28 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 6 )
region = Rect2( 29, 0, 29, 28 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 6 )
region = Rect2( 58, 0, 29, 28 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 6 )
region = Rect2( 87, 0, 29, 28 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 6 )
region = Rect2( 116, 0, 29, 28 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 145, 0, 29, 28 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "shoot",
"speed": 10.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "walk",
"speed": 5.5
} ]

[sub_resource type="CapsuleShape2D" id=30]
radius = 14.8414
height = 8.39816

[sub_resource type="CircleShape2D" id=31]
radius = 275.0

[sub_resource type="CircleShape2D" id=32]
radius = 217.24

[sub_resource type="CircleShape2D" id=33]
radius = 117.262

[node name="DemonShaman" type="KinematicBody2D" groups=[
"enemies",
"glueable",
]]
script = ExtResource( 3 )
GlueSpatter = ExtResource( 4 )
fireball = ExtResource( 5 )

[node name="DSSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4, -27 )
scale = Vector2( 2.1, 2.1 )
frames = SubResource( 29 )
animation = "idle"
frame = 3
playing = true

[node name="DSShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -4.74018, 9.62599 )
shape = SubResource( 30 )

[node name="DetectRadius" type="Area2D" parent="."]
position = Vector2( 4, -27 )

[node name="DetectShape" type="CollisionShape2D" parent="DetectRadius"]
visible = false
shape = SubResource( 31 )

[node name="FleeEdge" type="Area2D" parent="."]
position = Vector2( 4, -27 )

[node name="EdgeShape" type="CollisionShape2D" parent="FleeEdge"]
visible = false
shape = SubResource( 32 )

[node name="FleeRange" type="Area2D" parent="."]
position = Vector2( 4, -27 )

[node name="FleeShape" type="CollisionShape2D" parent="FleeRange"]
visible = false
shape = SubResource( 33 )

[node name="GlueLanding" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="FireballShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 19.1509, -37.6819 )

[node name="Navigation2D" type="Navigation2D" parent="."]
position = Vector2( 4, -27 )
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="body_exited" from="FleeEdge" to="." method="_on_FleeEdge_body_exited"]
[connection signal="body_entered" from="FleeRange" to="." method="_on_FleeRange_body_entered"]
